# lease-analyzer

./: .gitignore  .lintstagedrc.json  .mergify.yml  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml  cli.yml  e2e.yml  lighthouse.yml  real-model-nightly.yml  security.yml  tauri.yml
.memsearch/memory/: 2026-04-18.md
app/: .eslintrc.cjs  .gitignore  index.html  lighthouserc.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/.storybook/: main.ts  preview.tsx
app/public/: NOTICE
app/scripts/: audit-prod.mjs  build-classifier-assets.mjs  build-curated-packs.mjs  build-design-fonts.mjs  build-example-pack.mjs  build-sample-pdf.mjs  build-scanned-fixture.d.mts  build-scanned-fixture.mjs  build-tesseract-assets.mjs  check-bundle-budget.mjs  check-csp.mjs  check-csp.test.mjs  check-fonts.mjs  hybrid-stats-report.mjs  hybrid-stats-report.test.mjs  measure-llm-budget.mjs
app/src/: App.panels.test.tsx  App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
app/src-tauri/: Cargo.toml  README.md  tauri.conf.json
cli/: README.md  package-lock.json  package.json  tsconfig.json
cli/src/: index.ts  (+5 more)
docs/: BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  README.md  RELEASING.md  REPRODUCIBILITY.md  ROADMAP.md  RULES.md  SECURITY.md  SETUP.md  SYSTEM_DESIGN.md  TESTING.md  wave30-ci-postmortem.md  wave37-mergify-discrepancy-writeup.md  wave38-bundle-perf-report.md  wave40-phase18-decision.md  wave42-tauri-decision.md
scripts/: flake-watch.sh  rebase-and-merge.sh
(+537 files in other folders)
